# pallight

./: Cargo.toml  log.txt  test.pxc  test2.pxc  test3.pxc
editor_pal/: Cargo.toml
editor_pal/src/: app.rs  canvas.rs  chunk.rs  filemanager.rs  image_source.rs  main.rs  palette.rs
lib-pxc/: Cargo.toml
lib-pxc/src/: lib.rs
lib-pxc/src/compression/: lzw.rs  mod.rs  palette.rs  rle_delta.rs
lib-pxc/src/image/: decoder.rs  format.rs
lib-pxc/tests/: encoding.rs
lib-pxc/tests/common/: mod.rs
lib_pal/src/: constants.rs  lib.rs  main.rs
lib_pal/src/compression/: huffman.rs  image.rs
lib_pal/src/image/: decoder.rs  encoder.rs  format.rs  mod.rs
lib_pal/tests/: compression.rs
pxc-editor/: Cargo.toml
pxc-editor/src/: app.rs  chunk.rs  image.rs  image_source.rs  main.rs  viewport.rs
