[package]
name = "pxc-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.66"              # error handling
env_logger = "0.11.5"             # logging
rfd = "0.15.0"                    # File picker
image = "0.25"
eframe = "0.29.1"                 # GUI framework for egui applications
egui_extras = "0.29.1"            # For the color picker and other extra widgets
lib-pxc = { path = "../lib-pxc" } # Link to the compression library
